change table align fixed add div

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -21,8 +21,11 @@ border-left: 1px solid #ccc;
 
 .table_design tr{
 width: 100%;
+height: 100px;
+overflow: auto;
 padding: 1px;
 font-size: 14px;
+table-layout: fixed;
 text-align: left;
 vertical-align: top;
 color: #444;
@@ -36,6 +39,7 @@ border-bottom: 1px solid #ccc;
 
 .table_design th{
 width: 100px;
+height: 100px;
 text-align: left;
 vertical-align: top;
 color: #444;
@@ -46,17 +50,25 @@ border-right: 1px solid #ccc;
 border-bottom: 1px solid #ccc;
 }
 
+table.rable_design td span{
+height: 100px;
+float:left;
+max-height:100px;
+overflow: auto;
+display: block;
+}
 
 .table_design td{
-width: 80px;
-height: 40px;
+width: 100%;
+height: 100px;
+overflow: auto;
+table-layout: fixed;
 background-color: #fafafa;
 border-right: 1px solid #ccc;
 border-bottom: 1px solid #ccc;
 margin:0;
 padding:0;
-height: 100px;
-overflow-y: hidden;
+
 }
 
 
@@ -70,6 +82,12 @@ text-align: left;
 
 }
 
+.list_view{
+  width: 100px;
+  height: 80px;
+  float: left;
+  overflow: auto;
+}
 
 .search__query{
 font-size: 14px;
